Header on auth fixed

--- a/auth/index.html
+++ b/auth/index.html
@@ -37,10 +37,14 @@
 
     <body>
         <header class="page-header">
-            <p class="title">Sign in to play PICTIONARY!</p>
+            <img src="/assets/logo.png" id="logo-image" />
         </header>
 
         <main>
+            <h2 class="header-title">
+                <img src="../assets/pencil.png" id="pencil-image" /> Sign in!
+                <img src="../assets/pencil.png" id="pencil-image-two" />
+            </h2>
             <form id="auth-form">
                 <h2></h2>
                 <label>
