--- a/auth/index.html
+++ b/auth/index.html
@@ -32,7 +32,7 @@
 
         <!-- title and favicon -->
         <title>Pictionary</title>
-        <link rel="icon" type="image/x-icon" href="/assets/alchemy-favicon.png" />
+        <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
     </head>
 
     <body>
