WORKING: Big refactor of game.js

--- a/game/index.html
+++ b/game/index.html
@@ -69,28 +69,39 @@
                 <img id="game-image" src="../assets/game-placeholder.png" />
             </section>
 
-            <section id="generate-word-section" class="nes-input">
+            <section id="game-board" class="nes-input">
                 <h3 class="game-info" id="game-info">
                     Click below to start a game and generate a word!
                 </h3>
-                <div id="game-buttons">
-                    <button id="start-game" class="nes-btn">Start Game</button>
-                </div>
-                <p id="random-word" class="hidden"></p>
+                <button id="start-game" class="nes-btn hidden">Start Game</button>
+                <span id="timer"> </span>
             </section>
 
             <div class="game-section">
                 <div class="canvas-and-controls">
                     <section id="canvas-options" class="game-summary canvas-options nes-input">
-                        <span id="timer"> </span>
-                        <input type="color" name="color" id="color-selector" class="nes-input" />
-                        <button type="button" id="draw-mode" class="nes-btn is-primary">
+                        <p id="random-word"></p>
+                        <input
+                            type="color"
+                            name="color"
+                            id="color-selector"
+                            class="game-buttons nes-input"
+                        />
+                        <button
+                            type="button"
+                            id="draw-mode"
+                            class="game-buttons nes-btn is-primary"
+                        >
                             <img src="../assets/pencil (1).png" class="draw-mode-icon" />
                         </button>
-                        <button type="button" id="erase-mode" class="nes-btn is-warning">
+                        <button
+                            type="button"
+                            id="erase-mode"
+                            class="game-buttons nes-btn is-warning"
+                        >
                             <img src="../assets/eraser.png" class="draw-mode-icon" />
                         </button>
-                        <button id="clear-canvas" class="nes-btn">Reset</button>
+                        <button id="clear-canvas" class="game-buttons nes-btn">Reset</button>
                     </section>
                     <section id="canvas-section" class="nes-input">
                         <canvas id="canvas-src" height="550" width="550"></canvas>
